--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1629,7 +1629,7 @@ About Us Html
 
 @media screen and (min-width: 800px) {
   .main-aboutus2 {
-    min-height: calc(100vh -5rem -3rem);
+    min-height: calc(100vh - 5rem - 3rem);
   }
   #black-stripe {
     width: 350px;
